[refactor] content::TextInputManager - Make some methods const and initialize/cleanup IME maps

This CL makes some getter methods in TextInputManager const. Also,
the CL will clean up and initialize maps at the time of unregistering
and registering with TextInputManager.

BUG=629842, 578168

Review-Url: https://codereview.chromium.org/2170463002
Cr-Commit-Position: refs/heads/master@{#406891}

Former-commit-id: 4cfc03e1c2d8561641951e8843f4af4f52285703